Angualr-UI/angularui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angularui-service
spec:
  type: LoadBalancer
  selector:
    app: angularui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
