Angualr-UI/angularui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: angularui-service
      port:
        number: 80
  rules:
  - host: angularui.modem.ga
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angularui-service
            port:
              number: 80
